v18.0/12.API 索引.md
# API_documentation

以下部分描述了 SpreadJS 的 API。

| **命名空间** | **描述** |
| ---- | --- |
| [GC.Data](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Data) | 数据命名空间。 |
| [GC.Pivot](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Pivot) | 用于排列、分组、计算和分析数据透视数据的命名空间。 |
| [GC.Spread.Pivot](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Pivot) | 数据透视表的命名空间。 |
| [GC.Spread.Slicers](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Slicers) | 切片器的命名空间。 |
| [GC.Spread.CalcEngine](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.CalcEngine) | 计算工具的命名空间。 |
| [GC.Spread.CalcEngine.Expression](https://docs.grapecity.com.cn/spreadjs/help/api/classes/GC.Spread.CalcEngine.Expression) | 计算引擎表达式的命名空间。 |
| [GC.Spread.CalcEngine.Functions](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.CalcEngine.Functions) | 计算函数的命名空间。 |
| [GC.Spread.Commands](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Commands) | 撤销和重做工具的命名空间。 |
| [GC.Spread.Common](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Common) | 区域信息的命名空间。 |
| [GC.Spread.Excel](https://docs.grapecity.com.cn/spreadjs/help/api/excelio/modules/Excel.IO) | 客户端 Excel 导入和导出的命名空间。 |
| [GC.Spread.Excel.IO](https://docs.grapecity.com.cn/spreadjs/help/api/excelio/modules/Excel.IO) | Excel 文件导入和导出的命名空间。 |
| [GC.Spread.Formatter](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Formatter) | 格式化信息的命名空间。 |
| [GC.Spread.Sheets](gcdocsite__documentlink?toc-item-id=bb180762-0613-45c3-88b3-7a6564b1fb2e) | 工作表的命名空间。 |
| [GC.Spread.Sheets.IO](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.IO) | 工作表导入/导出的命名空间。 |
| [GC.Spread.Sheets.AutoMerge](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.AutoMerge) | 自动合并功能的命名空间。 |
| [GC.Spread.Sheets.Barcode](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.Barcode) | 在电子表格中处理条形码的命名空间。 |
| [GC.Spread.Sheets.Bindings](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.Bindings) | 绑定信息的命名空间。 |
| [GC.Spread.Sheets.CalcEngine](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.CalcEngine) | 引用信息的命名空间。 |
| [GC.Spread.Sheets.CellTypes](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.CellTypes) | 单元格类型的命名空间。 |
| [GC.Spread.Sheets.Charts](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.Charts) | 在电子表格中处理图表的命名空间。 |
| [GC.Spread.Sheets.Commands](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.Commands) | 命令的命名空间。 |
| [GC.Spread.Sheets.Comments](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.Comments) | 注释的命名空间。 |
| [GC.Spread.Sheets.ConditionalFormatting](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.ConditionalFormatting) | 条件格式化的命名空间。 |
| [GC.Spread.Sheets.ContextMenu](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.ContextMenu) | 上下文菜单操作的命名空间。 |
| [GC.Spread.Sheets.DataValidation](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.DataValidation) | 数据验证的命名空间。 |
| [GC.Spread.Sheets.Designer](https://docs.grapecity.com.cn/spreadjs/help/api/designer/modules/GC.Spread.Sheets.Designer) | 设计器支持的命名空间。 |
| [GC.Spread.Sheets.Fill](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.Fill) | 填充信息的命名空间。 |
| [GC.Spread.Sheets.Filter](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.Filter) | 筛选信息的命名空间。 |
| [GC.Spread.Sheets.FloatingObjects](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.FloatingObjects) | 浮动对象的命名空间。 |
| [GC.Spread.Sheets.FormulaTextBox](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.FormulaTextBox) | 公式文本框的命名空间。 |
| [GC.Spread.Sheets.FormulaPanel](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.FormulaPanel) | 公式面板的命名空间。 |
| [GC.Spread.Sheets.Hyperlink](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.Hyperlink) | 超链接的命名空间。 |
| [GC.Spread.Sheets.InputMask](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.InputMask) | 输入掩码的命名空间。 |
| [GC.Spread.Sheets.NameBox](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.NameBox) | 名称框支持的命名空间。 |
| [GC.Spread.Sheets.OutlineColumn](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.OutlineColumn) | 缩进列的命名空间。 |
| [GC.Spread.Sheets.Outlines](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.Outlines) | 大纲的命名空间。 |
| [GC.Spread.Sheets.PDF](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.PDF) | PDF 的命名空间。 |
| [GC.Spread.Sheets.Print](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.Print) | 打印的命名空间。 |
| [GC.Spread.Sheets.Search](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.Search) | 搜索的命名空间。 |
| [GC.Spread.Sheets.Shapes](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.Shapes) | 嵌入形状的命名空间。 |
| [GC.Spread.Sheets.Slicers](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.Slicers) | 切片器的命名空间。 |
| [GC.Spread.Sheets.Sparklines](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.Sparklines) | 迷你图信息的命名空间。 |
| [GC.Spread.Sheets.Tables](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.Tables) | 表格的命名空间。 |
| [GC.Spread.Sheets.TableSheet](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.TableSheet) | 表格工作表的命名空间。 |
| [GC.Spread.Sheets.GanttSheet](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.GanttSheet) | 甘特图工作表的命名空间。 |
| [GC.Spread.Sheets.DataCharts](https://docs.grapecity.com.cn/spreadjs/help/api/classes/GC.Spread.Sheets.DataCharts.DataChart) | 数据图表的命名空间。 |
| [GC.Spread.Sheets.Touch](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.Touch) | 触摸支持的命名空间。 |
| [GC.Spread.Report](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Report) | 报表工作表和模板工作表的命名空间。 |
| [GC.Spread.Sheets.StatusBar](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.StatusBar) | 状态栏的命名空间。 |
| [GC.Spread.Sheets.CellState](https://docs.grapecity.com.cn/spreadjs/help/api/modules/GC.Spread.Sheets.CellState) | 单元格状态的命名空间。 |
