v19.0/12.API 索引.md
# API_documentation

以下部分描述了 SpreadJS 的 API。

| **命名空间** | **描述** |
| ---- | --- |
| [GC.Data](gcdocsite__documentlink?toc-item-id=24e07bc4-c7cc-407c-98d5-0670ccab2cce) | 数据命名空间。 |
| [GC.Pivot](gcdocsite__documentlink?toc-item-id=0abeb3a7-c053-4b7b-952a-5fb9fd83cb8f) | 用于排列、分组、计算和分析数据透视数据的命名空间。 |
| [GC.Spread.Pivot](gcdocsite__documentlink?toc-item-id=3f072e63-870e-47f7-802d-0ac579ee18da) | 数据透视表的命名空间。 |
| [GC.Spread.Slicers](gcdocsite__documentlink?toc-item-id=fb748b42-eba6-419c-9433-e7827576bdce) | 切片器的命名空间。 |
| [GC.Spread.CalcEngine](gcdocsite__documentlink?toc-item-id=3eca38fa-96f4-458b-806f-59d84a4f1323) | 计算工具的命名空间。 |
| [GC.Spread.CalcEngine.Functions](gcdocsite__documentlink?toc-item-id=d5af0790-2453-4f2a-8371-e298cef6b68c) | 计算函数的命名空间。 |
| [GC.Spread.CalcEngine.LanguagePackages](gcdocsite__documentlink?toc-item-id=0d9808cf-8839-402c-b843-3f1b424c58a5) | 计算语言包的命名空间。 |
| [GC.Spread.Commands](gcdocsite__documentlink?toc-item-id=4f3a466d-affe-417e-bf18-9773200e339b) | 撤销和重做工具的命名空间。 |
| [GC.Spread.Common](gcdocsite__documentlink?toc-item-id=cf653826-ad5f-4615-acf4-4fab14833934) | 区域信息的命名空间。 |
| [GC.Spread.Excel](gcdocsite__documentlink?toc-item-id=e0099795-8c24-49d6-8c4a-7c6f0f1b9984) | 客户端 Excel 导入和导出的命名空间。 |
| [GC.Spread.Excel.IO](gcdocsite__documentlink?toc-item-id=6ae4008a-0631-4dc5-a13f-5d801e3aa564) | Excel 文件导入和导出的命名空间。 |
| [GC.Spread.Formatter](gcdocsite__documentlink?toc-item-id=0e4c5d01-3d42-4353-9215-d9b6e9694aa5) | 格式化信息的命名空间。 |
| [GC.Spread.Sheets](gcdocsite__documentlink?toc-item-id=bb180762-0613-45c3-88b3-7a6564b1fb2e) | 工作表的命名空间。 |
| [GC.Spread.Sheets.IO](gcdocsite__documentlink?toc-item-id=a23d167e-319c-41f6-b5ef-3be6391307bf) | 工作表导入/导出的命名空间。 |
| [GC.Spread.Sheets.AutoMerge](gcdocsite__documentlink?toc-item-id=f8999669-2834-4809-a144-4e7cf6f7d566) | 自动合并功能的命名空间。 |
| [GC.Spread.Sheets.Barcode](gcdocsite__documentlink?toc-item-id=ccc875f5-efb7-41a8-8bf9-1a35588f0d80) | 在电子表格中处理条形码的命名空间。 |
| [GC.Spread.Sheets.Bindings](gcdocsite__documentlink?toc-item-id=7adee0d0-cfd4-4c0b-98d2-9af1578f50ca) | 绑定信息的命名空间。 |
| [GC.Spread.Sheets.CalcEngine](gcdocsite__documentlink?toc-item-id=3db14618-6aaf-4198-b174-826a09082d17) | 引用信息的命名空间。 |
| [GC.Spread.Sheets.CellTypes](gcdocsite__documentlink?toc-item-id=62d81d0d-fe0b-46da-94e8-e960867e8625) | 单元格类型的命名空间。 |
| [GC.Spread.Sheets.Charts](gcdocsite__documentlink?toc-item-id=64916dee-f784-44ce-8be8-4c14fbdc69f3) | 在电子表格中处理图表的命名空间。 |
| [GC.Spread.Sheets.Commands](gcdocsite__documentlink?toc-item-id=cd9808fa-4d64-48a9-bd00-a337430ce860) | 命令的命名空间。 |
| [GC.Spread.Sheets.Comments](gcdocsite__documentlink?toc-item-id=fa2f26f7-131b-4a3d-a32d-96ec8422d2b4) | 注释的命名空间。 |
| [GC.Spread.Sheets.ConditionalFormatting](gcdocsite__documentlink?toc-item-id=8ccabfc2-ab84-412e-b4d2-60984cdd91ba) | 条件格式化的命名空间。 |
| [GC.Spread.Sheets.ContextMenu](gcdocsite__documentlink?toc-item-id=40b26c90-c6f1-403f-8da8-2766489aae5d) | 上下文菜单操作的命名空间。 |
| [GC.Spread.Sheets.DataValidation](gcdocsite__documentlink?toc-item-id=bc0bcde6-7b75-4e87-9ecd-09c7664f61d1) | 数据验证的命名空间。 |
| [GC.Spread.Sheets.Designer](gcdocsite__documentlink?toc-item-id=7e131f20-7eab-40bd-9f75-5ed6b663680e) | 设计器支持的命名空间。 |
| [GC.Spread.Sheets.Fill](gcdocsite__documentlink?toc-item-id=6ee3705e-f19c-4385-8cd8-8109466e1f8a) | 填充信息的命名空间。 |
| [GC.Spread.Sheets.Filter](gcdocsite__documentlink?toc-item-id=e1d1eee3-224f-472c-bbd8-ca0ee0234a71) | 筛选信息的命名空间。 |
| [GC.Spread.Sheets.FloatingObjects](gcdocsite__documentlink?toc-item-id=913fdae9-f0f4-4fcd-99fb-c580cf909b16) | 浮动对象的命名空间。 |
| [GC.Spread.Sheets.FormulaTextBox](gcdocsite__documentlink?toc-item-id=795f9345-3ce3-46db-83e2-869ed1b6a9f2) | 公式文本框的命名空间。 |
| [GC.Spread.Sheets.FormulaPanel](gcdocsite__documentlink?toc-item-id=b7bb06ff-3452-4651-b0b5-f1bcb3f2a0d0) | 公式面板的命名空间。 |
| [GC.Spread.Sheets.Hyperlink](gcdocsite__documentlink?toc-item-id=5916d1b7-3c7d-47c7-8ea9-b9d02158fadb) | 超链接的命名空间。 |
| [GC.Spread.Sheets.InputMask](gcdocsite__documentlink?toc-item-id=fab88b24-2287-4397-9931-d056ff82e527) | 输入掩码的命名空间。 |
| [GC.Spread.Sheets.NameBox](gcdocsite__documentlink?toc-item-id=2f3200d0-dd7d-406e-ae15-87a3e429d6dc) | 名称框支持的命名空间。 |
| [GC.Spread.Sheets.OutlineColumn](gcdocsite__documentlink?toc-item-id=f4853618-75de-4230-b854-7bb08a47f3d2) | 缩进列的命名空间。 |
| [GC.Spread.Sheets.Outlines](gcdocsite__documentlink?toc-item-id=e66c65c2-560d-4d62-aec7-3f9d727a4e0a) | 大纲的命名空间。 |
| [GC.Spread.Sheets.PDF](gcdocsite__documentlink?toc-item-id=e3326c42-2233-4c63-afa0-43f8fd989deb) | PDF 的命名空间。 |
| [GC.Spread.Sheets.Print](gcdocsite__documentlink?toc-item-id=b6ed7123-e802-40d8-ba2f-156aa3ab7211) | 打印的命名空间。 |
| [GC.Spread.Sheets.Search](gcdocsite__documentlink?toc-item-id=09c9612b-c16e-423a-9e01-3da71c50ca83) | 搜索的命名空间。 |
| [GC.Spread.Sheets.Shapes](gcdocsite__documentlink?toc-item-id=3619e0b0-f2ae-4633-80e5-45ca5e417b27) | 嵌入形状的命名空间。 |
| [GC.Spread.Sheets.Slicers](gcdocsite__documentlink?toc-item-id=9c67e946-8915-4357-ae31-713843904ae8) | 切片器的命名空间。 |
| [GC.Spread.Sheets.Sparklines](gcdocsite__documentlink?toc-item-id=e0fc9bde-31cc-40f9-b68f-99897542a3d3) | 迷你图信息的命名空间。 |
| [GC.Spread.Sheets.Tables](gcdocsite__documentlink?toc-item-id=73ba7d32-e5f9-4636-88a4-807136c27baa) | 表格的命名空间。 |
| [GC.Spread.Sheets.TableSheet](gcdocsite__documentlink?toc-item-id=cc0ab6d5-0cf4-4d01-a130-4fae24bd6877) | 集算表的命名空间。 |
| [GC.Spread.Sheets.GanttSheet](gcdocsite__documentlink?toc-item-id=f3d567b2-6885-4950-a156-71d03a3e5d89) | 甘特图工作表的命名空间。 |
| [GC.Spread.Sheets.DataCharts](gcdocsite__documentlink?toc-item-id=ed033134-1662-4370-bdde-5f99c4e5e0ae) | 数据图表的命名空间。 |
| [GC.Spread.Sheets.Touch](gcdocsite__documentlink?toc-item-id=80b9d132-3805-494c-b8c5-d21b076da58c) | 触摸支持的命名空间。 |
| [GC.Spread.Report](gcdocsite__documentlink?toc-item-id=dec45465-766f-4e25-b0c7-df3408be0bf1) | 报表 (ReportSheet) 和模板的命名空间。 |
| [GC.Spread.Sheets.StatusBar](gcdocsite__documentlink?toc-item-id=13dbecf6-db64-40a6-b060-5cc99c393de0) | 状态栏的命名空间。 |
| [GC.Spread.Sheets.CellState](gcdocsite__documentlink?toc-item-id=26d62a35-c6a1-4dac-8a5f-3f0abfafbeaa) | 单元格状态的命名空间。 |
